--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "node dist/out-tsc/index.js",
     "dev": "tsc-alias -p tsconfig.json --watch & tsc-watch --noClear -p \"./tsconfig.json\" --onSuccess \"node dist/index.js\"",
+    "dev:win": "tsc-watch --noClear -p \"./tsconfig.json\" --onSuccess \"npm run dev:winnext\"",
+    "dev:winnext": "tsc-alias -p tsconfig.json && node dist/index.js",
     "build": "tsc && tsc-alias -p tsconfig.json",
     "test": "jest"
   },
@@ -14,12 +16,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jest": "^29.5.4",
