--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "start": "node dist/out-tsc/index.js",
     "dev": "tsc-alias -p tsconfig.json --watch & tsc-watch --noClear -p \"./tsconfig.json\" --onSuccess \"node dist/index.js\"",
     "build": "tsc && tsc-alias -p tsconfig.json",
+    "dev:win": "tsc-watch --noClear -p \"./tsconfig.json\" --onSuccess \"npm run dev:winnext\"",
+    "dev:winnext": "tsc-alias -p tsconfig.json && node dist/index.js",
     "test": "jest"
   },
   "keywords": [],
