--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "flowbite": "^1.8.1",
+    "flowbite-vue": "^0.0.17-next.13",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
